--- a/claim-app/src/App.css
+++ b/claim-app/src/App.css
@@ -25,3 +25,10 @@
     background: linear-gradient(90deg, rgb(0,101,219) 40%, rgb(0,212,255) 100% );
     
 }
+
+/*Form*/
+
+.form{
+    background: rgb(0,10,219);
+    background: linear-gradient(90deg, rgb(0,101,219) 40%, rgb(0,212,255) 100% );
+}
